Fix horizontal scroll bar 768 width

--- a/styles/style.css
+++ b/styles/style.css
@@ -244,8 +244,9 @@ a {
 
 
  @media (min-width: 768px) { 
+  
   .page {
-    min-inline-size: 768px;
+    min-inline-size: 728px;
   }
 
   .header {
